[package]
name = "aoc2022"
version = "0.15.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
num = "0.4.0"
rand = "0.8.5"
regex = "1.7.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.89"
