[package]
name = "aoc2022"
version = "0.20.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.10.0"
itertools = "0.10.5"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
regex = "1.7.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.89"
